--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -2,5 +2,5 @@
   "$schema": "node_modules/wrangler/config-schema.json",
   "name": "email-worker",
   "compatibility_date": "2024-04-01",
-  "main": "./src/index.tsx"
+  "main": "./src/index.ts"
 }
